add tests for AppContext